fixtures/invalid/raw-html.lmk
@summary
Do not allow <script>alert(1)</script> in Lessmark.
